Guia05_CSS, Primer commit, agregando cositas referentes a grid y a flex

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
         <p>Estudiante | angel.pilataxi123464@gmail.com | 0980064913</p>
     </header>
 
-    <ul>
-        <li><a href="#resumen">Resumen</a></li>
-        <li><a href="#educacion">Educación</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
-        <li><a href="#testimonios">Testimonios</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="#resumen">Resumen</a></li>
+            <li><a href="#educacion">Educación</a></li>
+            <li><a href="#habilidades">Habilidades</a></li> <!-- Agregar Video -->
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#testimonios">Testimonios</a></li>
+        </ul>
     </nav>
 
     <main>
@@ -135,9 +136,9 @@
         </section>
     </main>
 
-    <footer>
-        <form action="mailto:angel.pilataxi123464@gmail.com" method="post" enctype="text/plain"
-            style="margin-top: 20px;">
+
+    <section>
+        <form action="mailto:angel.pilataxi123464@gmail.com" method="post" enctype="text/plain" style="margin-top: 20px;">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
             <label for="email">Correo electrónico:</label>
@@ -154,6 +155,8 @@
             <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
             <button type="submit">Enviar</button>
         </form>
+    </section>
+    <footer>
         <ul>
             <li><a href="https://www.linkedin.com/in/tunombre">LinkedIn</a></li>
             <li><a href="https://github.com/tunombre">GitHub</a></li>
