Se realizaron modificaciones del diseño

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
                 </tr>
             </table>
 
+            <!-- Video embebido: YouTube -->
+            <div class="project-video">
+                <div class="video-wrap">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1J4cngHhnuI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+
         </section>
     </main>
 
