--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>Mi Currículum Vitae</title>
-    <link rel="stylesheet" href="/stylesheet/styles.css">
+    <link rel="stylesheet" href="stylesheet/styles.css">
 </head>
 
 <body>
     <header>
-        <img src="/img/FOTO_ANGEL_PILATAXI.jpg" alt="Foto de perfil de Angel Pilataxi" id="profile-pic" />
+        <img src="img/FOTO_ANGEL_PILATAXI.jpg" alt="Foto de perfil de Angel Pilataxi" id="profile-pic" />
         <h1>Angel Eduardo Pilataxi Rodriguez</h1>
         <p>Estudiante | angel.pilataxi123464@gmail.com | 0980064913</p>
     </header>
